--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -45,6 +45,7 @@ jobs:
         run: |
           apt-get install -y tox rust-all cargo
       - name: Activate Python virtual environment
+        run: |
           python3 -m venv venv
           . venv/bin/activate
           pip install --upgrade pip
