Modify OAuth2 client ID and secret in config
Updated OAuth2 client ID and secret configuration.

--- a/config
+++ b/config
@@ -157,10 +157,10 @@
 #oauth2_token_endpoint = <URL>
 
 # OAuth2 client id
-#oauth2_client_id = <client_id>
+#oauth2_client_id = radicale
 
-# OAuth2 client secret
-#oauth2_client_secret = <client_secret>
+# OAuth2 client secret (optional)
+#oauth2_client_secret =
 
 # PAM service
 #pam_serivce = radicale
